fixing width on mobile view

--- a/src/App.css
+++ b/src/App.css
@@ -13,23 +13,3 @@ body {
   min-height: 100vh;
   
 }
-
-#alg_mouse_home .alg_mouse_home_arrow {
-  -moz-animation: bounce 2s infinite;
-  -webkit-animation: bounce 2s infinite;
-  animation: bounce 2s infinite
-}
-
-@keyframes bounce {
-  0%,20%,50%,80%,100% {
-      transform: translateY(0);
-  }
-
-  40% {
-      transform: translateY(15px);
-  }
-
-  60% {
-      transform: translateY(5px);
-  }
-}
