--- a/src/Components/Cards.css
+++ b/src/Components/Cards.css
@@ -32,7 +32,7 @@ h1 {
   flex: 1;
   margin: 0 1rem;
   border-radius: 10px;
-  width: 400px;
+  width: 320px;
 }
 
 .cards__item__link {
