--- a/src/Components/NavBar/NavBar.css
+++ b/src/Components/NavBar/NavBar.css
@@ -65,6 +65,8 @@
 @media screen and (max-width: 960px) {
     .NavbarItems {
         position: fixed;
+        max-width: 100%;
+        height: auto;
         
     }
 
